// File:        msg_base.proto
// Description: ---
// Notes:       ---
// Author:      leoxiang <leoxiang727@qq.com>
// Revision:    2015-06-09 by leoxiang

import "conf_deploy.proto";
package msg;

////////////////////////////////////////////////////////////
// network headers
/*enum ENConstant*/
/*{*/

/*}*/

message TcpHead
{
    optional uint32 index               = 1;
    optional string client_ip           = 2;
    optional uint32 client_port         = 3;
    optional bool   is_new_connection   = 4;
    optional bool   is_close_connection = 5;
    optional uint32 connect_time        = 6;
}

message ProxyHead
{
    optional conf.ENServerType src_server_type = 1;
    optional conf.ENServerType dst_server_type = 2;
    optional uint32            src_server_id = 3;
    optional uint32            dst_server_id = 4;
}

// vim:ts=4:sw=4:et:ft=proto:
